Adds project and project_url to mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,12 @@ docs_dir: docs/book
 site_dir: docs/html
 nav:
     - index.md
-    - Introduction: intro.md
-    - "Flash Messages": messages.md
-    - "Flash Message Middleware": middleware.md
+    - { Introduction: intro.md }
+    - { 'Flash Messages': messages.md }
+    - { 'Flash Message Middleware': middleware.md }
 site_name: mezzio-flash
 site_description: 'Flash messages for PSR-7 applications using mezzio-session'
 repo_url: 'https://github.com/mezzio/mezzio-flash'
+extra:
+    project: Mezzio
+    project_url: 'https://docs.mezzio.dev'
