--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.4.0",
-        "phpunit/phpunit": "^9.5.24"
+        "phpunit/phpunit": "^9.5.24",
+        "psalm/plugin-phpunit": "^0.16.1",
+        "vimeo/psalm": "^4.9"
     },
     "autoload": {
         "psr-4": {
