Generate psalm-baseline.xml and add 'static-analysis' composer-script.
Signed-off-by: Tim Lieberman <dev@timdev.com>

--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,8 @@
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
         "test": "phpunit --colors=always",
-        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+        "static-analysis": "psalm --shepherd --stats"
     },
     "conflict": {
         "zendframework/zend-expressive-flash": "*"
