Update composer `php` to `~8.0.0 || ~8.1.0 || ~8.2.0`
Signed-off-by: Nathanael Esayeas <nathanael.esayeas@protonmail.com>

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         }
     },
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
         "mezzio/mezzio-session": "^1.0",
         "psr/http-server-middleware": "^1.0"
     },
