--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,6 @@
 /phpcs.xml export-ignore
 /phpunit.xml.dist export-ignore
 /test/ export-ignore
+/psalm.xml export-ignore
+/renovate.json export-ignore
+/.laminas-ci.json export-ignore
