--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,10 @@
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.5.0",
-        "phpunit/phpunit": "^10.2.2",
+        "laminas/laminas-diactoros": "^3.3",
+        "phpunit/phpunit": "^10.5.7",
         "psalm/plugin-phpunit": "^0.18.4",
-        "vimeo/psalm": "^5.13.1"
+        "vimeo/psalm": "^5.20.0"
     },
     "autoload": {
         "psr-4": {
